force-app/main/default/objects/Opportunity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>CASE(StageName,
&quot;Qualified&quot;,&quot;Open&quot;,
&quot;Working On Quote&quot;,&quot;Open&quot;,
&quot;Quote Sent&quot;,&quot;Open&quot;,
&quot;Out For Signature&quot;,&quot;Open&quot;,
&quot;Awaiting Credit Approval&quot;,&quot;Open&quot;,
&quot;Identification&quot;,&quot;Open&quot;, 
&quot;Conduct Due Diligence&quot;,&quot;Open&quot;, 
&quot;Review Customer Requirements&quot;,&quot;Open&quot;, 
&quot;Determine Solution&quot;,&quot;Open&quot;, 
&quot;Develop/Review Pricing Model&quot;,&quot;Open&quot;, 
&quot;Finance Review&quot;,&quot;Open&quot;, 
&quot;Develop Proposal&quot;,&quot;Open&quot;, 
&quot;Proposal Presentation&quot;,&quot;Open&quot;, 
&quot;Solution Discussion and Negotiation&quot;,&quot;Open&quot;, 
&quot;Contract Preparation and Negotiation&quot;,&quot;Open&quot;, 
&quot;Financial Approval&quot;,&quot;Open&quot;, 
&quot;Closed Won&quot;,&quot;Closed Won&quot;,
&quot;Deal Closure/Won&quot;,&quot;Closed Won&quot;, 
&quot;Closed Lost&quot;,&quot;Closed Lost&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>