force-app/main/default/objects/Opportunity/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>IF(AND(IsWon) , &quot;Won&quot;, 
IF(NOT(IsClosed), &quot;Open&quot;, 
&quot;Lost&quot;))</formula>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>