force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Hidden field used to update the opportunity type during lead conversion.</description>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial - Project</fullName>
            </value>
            <value>
                <fullName>Commercial - Flow Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>