force-app/main/default/objects/Opportunity/fields/Parts_Compensation_Terms__c.field-meta.xml
<CustomField>
    <fullName>Parts_Compensation_Terms__c</fullName>
    <inlineHelpText>Enter the existing parts compensation language in the contract</inlineHelpText>
    <label>Parts Compensation Terms</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>