force-app/main/default/objects/Opportunity/fields/Parts_Supply_Chain_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>Parts_Supply_Chain_Approval_of_BRD__c</fullName>
    <label>Parts &amp; Supply Chain Approval of BRD</label>
    <type>Date</type>
</CustomField>