force-app/main/default/objects/Opportunity/fields/Planned_Determine_Solution_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Determine_Solution_Duration__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Planned Determine Solution Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>