force-app/main/default/objects/Opportunity/fields/Planned_Dev_Rev_Pricing_Model_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Dev_Rev_Pricing_Model_Duration__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Planned Dev/Rev Pricing Model Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>