force-app/main/default/objects/Opportunity/fields/Planned_Finance_Review_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Finance_Review_Duration__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>In Days</inlineHelpText>
    <label>Planned Finance Review Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>