force-app/main/default/objects/Opportunity/fields/Pricing_Approval_of_BRD__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_of_BRD__c</fullName>
    <label>Pricing Approval of BRD</label>
    <type>Date</type>
</CustomField>