force-app/main/default/objects/Opportunity/fields/Prior_Score__c.field-meta.xml
<CustomField>
    <fullName>Prior_Score__c</fullName>
    <label>Prior Score</label>
    <summarizedField>Funnel_Scorecard__c.Prior_Score__c</summarizedField>
    <summaryForeignKey>Funnel_Scorecard__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>