force-app/main/default/objects/Opportunity/fields/Proc_ID__c.field-meta.xml
<CustomField>
    <fullName>Proc_ID__c</fullName>
    <inlineHelpText>Input Proc ID&#39;s for the renewal opportunity</inlineHelpText>
    <label>Proc ID</label>
    <type>TextArea</type>
</CustomField>