force-app/main/default/objects/Opportunity/fields/Product_Assortment_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Product_Assortment_Reason_Lost__c</fullName>
    <description>Reason the product assortment did not meet the customer&#39;s needs.</description>
    <inlineHelpText>Select the reason the product assortment did not meet the customer’s needs.</inlineHelpText>
    <label>Product Assortment Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Lost__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand not offered</fullName>
            </value>
            <value>
                <fullName>Size not offered</fullName>
            </value>
            <value>
                <fullName>Color not offered</fullName>
            </value>
            <value>
                <fullName>Inventory not available</fullName>
            </value>
            <value>
                <fullName>ADA not offered</fullName>
            </value>
            <value>
                <fullName>Engergy Star not offered</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>