force-app/main/default/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioners</fullName>
            </value>
            <value>
                <fullName>Carry-in Repair</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Commercial Fitness</fullName>
            </value>
            <value>
                <fullName>Commercial Mattresses</fullName>
            </value>
            <value>
                <fullName>Commercial Parts</fullName>
            </value>
            <value>
                <fullName>Commercial TVs</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Fitness Equipment</fullName>
            </value>
            <value>
                <fullName>Floor Care</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Gift Cards</fullName>
            </value>
            <value>
                <fullName>Haul-Away</fullName>
            </value>
            <value>
                <fullName>Home Improvement</fullName>
            </value>
            <value>
                <fullName>In-Home Repair</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Lawn &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Major Appliances</fullName>
            </value>
            <value>
                <fullName>Mattresses</fullName>
            </value>
            <value>
                <fullName>PA &amp; Warranty</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Recalls/Reworks</fullName>
            </value>
            <value>
                <fullName>Replacements</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>TVs &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>Water Treatment</fullName>
            </value>
            <value>
                <fullName>Water Heaters</fullName>
            </value>
            <value>
                <fullName>Business to Business Paid Service</fullName>
            </value>
            <value>
                <fullName>Service Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>