force-app/main/default/objects/Opportunity/fields/Products_D__c.field-meta.xml
<CustomField>
    <fullName>Products_D__c</fullName>
    <inlineHelpText>Enter products related to renewal opportunity</inlineHelpText>
    <label>Products_D</label>
    <type>TextArea</type>
</CustomField>