force-app/main/default/objects/Opportunity/fields/Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager__c</fullName>
    <description>The contact on the Business Integration team who will project manage this BRD.</description>
    <inlineHelpText>The contact on the Business Integration team who will project manage this BRD.</inlineHelpText>
    <label>Program Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brian Susmarski</fullName>
            </value>
            <value>
                <fullName>Christina DePasquale</fullName>
            </value>
            <value>
                <fullName>Don MacKay</fullName>
            </value>
            <value>
                <fullName>Lorinda Hansen</fullName>
            </value>
            <value>
                <fullName>Vaibhav Khanna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>