force-app/main/default/objects/Opportunity/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Appliance Select Plus</fullName>
            </value>
            <value>
                <fullName>Commercial Marketplace</fullName>
            </value>
            <value>
                <fullName>Disaster Recover</fullName>
            </value>
            <value>
                <fullName>EPP (Employee Purchase Plan)</fullName>
            </value>
            <value>
                <fullName>Final Touch</fullName>
            </value>
            <value>
                <fullName>My Gofer</fullName>
            </value>
            <value>
                <fullName>Realty Home Advantage</fullName>
            </value>
            <value>
                <fullName>Remodeling</fullName>
            </value>
            <value>
                <fullName>TCO (Total Cost of Ownership)</fullName>
            </value>
            <value>
                <fullName>Weatherization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>