force-app/main/default/objects/Opportunity/fields/Qualification_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Debrief__c</fullName>
    <description>Qualification Debrief is mapped to the Opportunity during Lead Conversion</description>
    <label>Qualification Debrief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>