force-app/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <inlineHelpText>Select the reason the customer decided not to purchase from Sears Commercial. If this opportunity was created due to an administration error, please specify why (i.e. duplicate opportunity, opportunity created in error, etc.).</inlineHelpText>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer lost bid or project was cancelled</fullName>
            </value>
            <value>
                <fullName>Product assortment did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Price offered did not meet customer perception of value</fullName>
            </value>
            <value>
                <fullName>Credit solution did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Contract terms did not meet customer needs</fullName>
            </value>
            <value>
                <fullName>Service failure (e.g. delivery, billing, order management) caused customer to purchase elsewhere</fullName>
            </value>
            <value>
                <fullName>Administration error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>