force-app/main/default/objects/Opportunity/fields/Reason_Lost_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost_Description__c</fullName>
    <label>Reason Lost Description</label>
    <type>TextArea</type>
</CustomField>