force-app/main/default/objects/Opportunity/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <label>Referral</label>
    <length>100</length>
    <type>Text</type>
</CustomField>