force-app/main/default/objects/Opportunity/fields/Requested_Brand__c.field-meta.xml
<CustomField>
    <fullName>Requested_Brand__c</fullName>
    <inlineHelpText>Which appliance brand did the customer want to purchase?</inlineHelpText>
    <label>Requested Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Lost__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Afresh</fullName>
            </value>
            <value>
                <fullName>Amana</fullName>
            </value>
            <value>
                <fullName>Blakeslee</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>Dacor</fullName>
            </value>
            <value>
                <fullName>Daewood</fullName>
            </value>
            <value>
                <fullName>Electricord</fullName>
            </value>
            <value>
                <fullName>Electrolux</fullName>
            </value>
            <value>
                <fullName>Fisher &amp; Paykel</fullName>
            </value>
            <value>
                <fullName>Frigidaire</fullName>
            </value>
            <value>
                <fullName>Frigidaire Gallary</fullName>
            </value>
            <value>
                <fullName>GE Artistry Series</fullName>
            </value>
            <value>
                <fullName>GE Café</fullName>
            </value>
            <value>
                <fullName>GE Profile Series</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>Gladiator Garage Works</fullName>
            </value>
            <value>
                <fullName>Haier Appliances</fullName>
            </value>
            <value>
                <fullName>Haier</fullName>
            </value>
            <value>
                <fullName>Heartland</fullName>
            </value>
            <value>
                <fullName>Hello Kitty</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>HotPoint</fullName>
            </value>
            <value>
                <fullName>Idylis</fullName>
            </value>
            <value>
                <fullName>Kenmore</fullName>
            </value>
            <value>
                <fullName>Kenmore Elite</fullName>
            </value>
            <value>
                <fullName>Kenmore Pro</fullName>
            </value>
            <value>
                <fullName>KitchenAide</fullName>
            </value>
            <value>
                <fullName>LG Appliances</fullName>
            </value>
            <value>
                <fullName>Liebherr</fullName>
            </value>
            <value>
                <fullName>Marvel Comics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>