force-app/main/default/objects/Opportunity/fields/Requested_Division__c.field-meta.xml
<CustomField>
    <fullName>Requested_Division__c</fullName>
    <inlineHelpText>Which appliance division did the customer want to purchase?</inlineHelpText>
    <label>Requested Division</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Lost__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3, HOME OFFICE</fullName>
            </value>
            <value>
                <fullName>6, SPORTING GOODS</fullName>
            </value>
            <value>
                <fullName>8, HOUSEWARES</fullName>
            </value>
            <value>
                <fullName>9, TOOLS</fullName>
            </value>
            <value>
                <fullName>10, HOME IMPROVEMT PROD/SERV</fullName>
            </value>
            <value>
                <fullName>14, LUGGAGE</fullName>
            </value>
            <value>
                <fullName>20, FLOORCARE/SEWING</fullName>
            </value>
            <value>
                <fullName>22, COOKING &amp; CLEANUP</fullName>
            </value>
            <value>
                <fullName>24, WINDOW SHOP</fullName>
            </value>
            <value>
                <fullName>26, LAUNDRY</fullName>
            </value>
            <value>
                <fullName>28, AUTOMOTIVE</fullName>
            </value>
            <value>
                <fullName>30, PAINT</fullName>
            </value>
            <value>
                <fullName>32, HOME ENVIRONMENT</fullName>
            </value>
            <value>
                <fullName>34, ELECTRICAL</fullName>
            </value>
            <value>
                <fullName>42, AIR &amp; WATER APPLIANCES</fullName>
            </value>
            <value>
                <fullName>44, FINE JEWELRY</fullName>
            </value>
            <value>
                <fullName>46, FOOD STORAGE</fullName>
            </value>
            <value>
                <fullName>49, CHILDREN&#39;S FURNITURE</fullName>
            </value>
            <value>
                <fullName>57, HOME ELECTRONICS</fullName>
            </value>
            <value>
                <fullName>58, ENTERTAINMENT SOFTWARE</fullName>
            </value>
            <value>
                <fullName>70, PROTECTION AGREEMENT SALE</fullName>
            </value>
            <value>
                <fullName>71, LAWN, GARDEN, PATIO</fullName>
            </value>
            <value>
                <fullName>82, BEDDING</fullName>
            </value>
            <value>
                <fullName>400, Services - Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>