force-app/main/default/objects/Opportunity/fields/Retail_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Retail_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>Retail Lead ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>