force-app/main/default/objects/Opportunity/fields/Retail_Status__c.field-meta.xml
<CustomField>
    <fullName>Retail_Status__c</fullName>
    <label>Retail Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Contacting Customer</fullName>
            </value>
            <value>
                <fullName>Negotiating with Customer</fullName>
            </value>
            <value>
                <fullName>Sale Completed</fullName>
            </value>
            <value>
                <fullName>Customer Rejects Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>