force-app/main/default/objects/Opportunity/fields/Retail_Status_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Retail_Status_Last_Modified_Date__c</fullName>
    <label>Retail Status Last Modified Date</label>
    <type>Date</type>
</CustomField>