force-app/main/default/objects/Opportunity/fields/Revenue_by_Week__c.field-meta.xml
<CustomField>
    <fullName>Revenue_by_Week__c</fullName>
    <description>Opportunity amount divided by shipping period divided by week</description>
    <formula>Amount / (( Shipping_End_Date__c - Shipping_Start_Date__c ) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue by Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>