force-app/main/default/objects/Opportunity/fields/Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Sales_Process__c</fullName>
    <description>The Opportunity Stages roll-up to the Sales Process Stages</description>
    <inlineHelpText>Based on the Stage of the Opportunity this field will roll-up to the correct place in the Sales Process.  This is a locked field and cannot be modified.</inlineHelpText>
    <label>Sales Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>