force-app/main/default/objects/Opportunity/fields/Scorecard_B1_through_B8__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_B1_through_B8__c</fullName>
    <label>Scorecard B1 through B8</label>
    <summarizedField>Funnel_Scorecard__c.Scorecard_B1_through_B8__c</summarizedField>
    <summaryForeignKey>Funnel_Scorecard__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>