force-app/main/default/objects/Opportunity/fields/Scorecard_B9_through_O6_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_B9_through_O6_Commercial__c</fullName>
    <label>Scorecard B9 through O6 Commercial</label>
    <summarizedField>Funnel_Scorecard__c.Scorecard_B9_through_O6_Commercial__c</summarizedField>
    <summaryForeignKey>Funnel_Scorecard__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>