force-app/main/default/objects/Opportunity/fields/Scorecard_O7_through_O10_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_O7_through_O10_Commercial__c</fullName>
    <label>Scorecard O7 through O10 Commercial</label>
    <summarizedField>Funnel_Scorecard__c.Scorecard_O7_through_O10_Commercial__c</summarizedField>
    <summaryForeignKey>Funnel_Scorecard__c.Opportunity_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>