force-app/main/default/objects/Opportunity/fields/Sears_Employee__c.field-meta.xml
<CustomField>
    <fullName>Sears_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sears Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>