force-app/main/default/objects/Opportunity/fields/Send_to_Business_Integration__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Business_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Business Integration</label>
    <type>Checkbox</type>
</CustomField>