force-app/main/default/objects/Opportunity/fields/Send_to_Carry_In__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Carry_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Carry-In</label>
    <type>Checkbox</type>
</CustomField>