force-app/main/default/objects/Opportunity/fields/Send_to_CCN__c.field-meta.xml
<CustomField>
    <fullName>Send_to_CCN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to CCN</label>
    <type>Checkbox</type>
</CustomField>