force-app/main/default/objects/Opportunity/fields/Send_to_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Delivery</label>
    <type>Checkbox</type>
</CustomField>