force-app/main/default/objects/Opportunity/fields/Send_to_In_Home__c.field-meta.xml
<CustomField>
    <fullName>Send_to_In_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to In-Home</label>
    <type>Checkbox</type>
</CustomField>